Fix countdown spacing; mobile columns

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -91,8 +91,7 @@ main {
   @apply ring-offset-0;
   @apply bg-transparent;
   color: white !important;
-  @apply h-4;
-  @apply my-1;
+  @apply h-6;
 }
 
 input {
